Fixed a few problems with landing page 1) Missing closing brace 2) Header was wrong colour

--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -30,7 +30,7 @@ html[data-scroll='0'] nav#navbar {
     }
 
     to {
-        background-color: var(--nav-background);
+        background-color: var(--header-background);
         box-shadow: 0 0 1em var(--header-background);
 
     }
